--- a/api-act-orders/src/main/resources/application.properties
+++ b/api-act-orders/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=api-act-orders
+server.port=8081
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=docker
 spring.datasource.password=senha1234
+spring.kafka.bootstrap-servers=localhost:9092
