--- a/api-act-orders/src/main/resources/application.properties
+++ b/api-act-orders/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=docker
 spring.datasource.password=senha1234
 spring.kafka.bootstrap-servers=localhost:9092
+
+product.service.name=product-service
+product.service.url=http://localhost:8082
