--- a/products-service/src/main/resources/application.properties
+++ b/products-service/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=products-service
+server.port=8082
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=docker
+spring.datasource.password=senha1234
